# a4

./: .gitignore  CONTRIBUTING.md  README.md  test-report.html  tsconfig.json
.github/workflows/: conformance-ci.yml  deploy-docs.yml  js-ci.yml  publish-js-packages.yml  publish-js-packages.yml.disabled  publish-relay-docker.yml  publish-relay-docker.yml.disabled  publish-rust-crates.yml  rust-ci.yml  rust-release-artifacts.yml  rust-release-artifacts.yml.disabled
benchmark-results/: relay_benchmark_20260311_013554.txt  relay_benchmark_20260311_022203.txt  relay_benchmark_20260311_022329.txt  relay_benchmark_20260311_022815.txt  relay_benchmark_20260311_023011.txt  relay_benchmark_20260311_124134.txt  relay_benchmark_20260311_125218.txt  relay_benchmark_20260311_125858.txt  relay_benchmark_20260311_131647.txt  relay_benchmark_20260311_131917.txt  relay_benchmark_20260311_132310.txt  relay_benchmark_20260311_133143.txt  relay_benchmark_20260311_134012.txt  relay_benchmark_20260311_153145.txt
docs/: README.md  SUMMARY.md  architecture-optimization-2026-03-15.md  book.toml  e2e-encryption-execution-todo.md  e2e-encryption-test-plan.md  e2e-friction-analysis-2026-03-15.md  e2e-operations.md  release-process.md  specification.md
docs/adr/: 0001-message-status-and-capability-protocols.md
js/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml
js/cli/: .npmignore  README.md  a4  package.json  tsup.config.ts
js/core/: README.md
js/mcp-server/: README.md  package.json  tsup.config.ts
js/relay/: .npmignore  Dockerfile  README.md  package.docker.json  package.json  tsup.config.ts  vitest.config.ts
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/cli-rs/: Cargo.toml  README.md
rust/cli-rs/scripts/: package-release.sh  reachability_e2e.py
rust/cli-rs/src/: config.rs  conformance.rs  daemon.rs  e2e_state.rs  identity.rs  lib.rs  main.rs  protocol.rs  relay.rs  trust.rs  ui.rs
rust/cli-rs/src/commands/: alias.rs  allow.rs  ask.rs  block.rs  card.rs  daemon.rs  discover.rs  e2e.rs  endorsements.rs  find.rs  identity.rs  inbox.rs  init.rs  leave.rs  listen.rs  message_lifecycle.rs  mod.rs  peers.rs  prekeys.rs  publish.rs  reachability.rs  route.rs  score.rs  send.rs  serve.rs  sessions.rs  status.rs  target_resolution.rs  tell.rs  trace.rs  trust_cli.rs  unblock.rs  unpublish.rs  vouch.rs  wait.rs
rust/core/: Cargo.toml  README.md
rust/core/src/: config.rs  identity.rs  lib.rs  protocol.rs  trust.rs
rust/core/src/e2e/: application_envelope.rs  bootstrap.rs  cbor_x.rs  crypto.rs  device_state.rs  messages.rs  mod.rs  ratchet.rs  signed_pre_key.rs  tests.rs  types.rs  vectors.rs  x3dh.rs
rust/runtime/: Cargo.toml  README.md
rust/runtime/src/: card.rs  e2e_receive.rs  e2e_send.rs  inbox.rs  lib.rs  query.rs  relay.rs  relay_worker.rs  session_manager.rs
spec/conformance/: block-filtering.json  daemon-persistence.json  delivery-mode.json  message-status.json  protocol-matching.json  reply-correlation.json  tell-protocol-selection.json
test-scripts/: COMPREHENSIVE_TESTING_GUIDE.md  README.md  SCRIPTS_INDEX.md  TESTING_GUIDE.md  benchmark-relay.sh  ci-test-relay.sh  cleanup-connections.sh  generate-test-report.sh  init-test-output.sh  load-test-relay.sh  run-all-tests.sh  run-core-tests.sh  run-js-workspace-tests.sh  run-master-tests.sh  setup-test-env.sh  stress-test-relay.sh  test-config.sh  test-discovery-card-signatures.sh  test-error-handling.sh  test-malformed-messages.sh  test-network-connectivity.sh  test-quick-agent-groups.sh  test-relay-comprehensive.sh  test-relay-deployment.sh  test-relay-quick.sh  test-suite-integration.sh  validate-test-results.sh  verify-performance.sh
test-scripts/cli/: common.sh  run-all-cli-tests.sh  test-default-protocol.sh  test-inbox-job-aggregation.sh  test-protocol-selection.sh  test-smart-body.sh  test-smart-payload.sh  test-socket-fallback.sh  test-unified-flags.sh
test-scripts/conformance/: compare-results.mjs  run-all.sh  run-js.mjs
test-scripts/e2e/: README.md  REAL_MACHINE_FULL_CHAIN_TEST.md  TEST_MATRIX.yaml  helpers.sh  run-all-e2e-tests.sh  test-auto-recovery.sh  (+6 more)
(+223 files in other folders)
