[package]
name = "quadra-a-core"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0"

[lib]
name = "quadra_a_core"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
bs58 = "0.5"
ciborium = "0.2"
ed25519-dalek = { version = "2", default-features = false, features = ["rand_core"] }
hex = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
