[package]
name = "quadra-a-core"
version = "0.1.0-beta.1"
edition = "2021"
description = "Core protocol primitives for the quadra-a agent network"
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/quadra-a/a4"
homepage = "https://github.com/quadra-a/a4"
keywords = ["agent", "protocol", "networking", "e2e", "quadra-a"]
categories = ["network-programming", "cryptography"]

[lib]
name = "quadra_a_core"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
bs58 = "0.5"
ciborium = "0.2"
ed25519-dalek = { version = "2", default-features = false, features = ["rand_core"] }
hex = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_bytes = "0.11"
hkdf = "0.12"
sha2 = "0.10"
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
