[package]
name = "quadra-a-runtime"
version = "0.1.0-beta.1"
edition = "2021"
description = "Runtime helpers for local quadra-a applications and services"
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/quadra-a/a4"
homepage = "https://github.com/quadra-a/a4"
keywords = ["agent", "runtime", "messaging", "daemon", "quadra-a"]
categories = ["network-programming"]

[lib]
name = "quadra_a_runtime"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
hex = "0.4"
ciborium = "0.2"
quadra-a-core = { version = "0.1.0-beta.1", path = "../core" }
